--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -146,7 +146,7 @@
                                 </span>
                                 <span class="hide-menu">Danh sách hóa đơn</span>
                             </a>
-                           
+
                         </li>
                         <li class="sidebar-item">
                             <a class="sidebar-link" href="./authentication-register.html" aria-expanded="false">
@@ -161,14 +161,8 @@
                             <span class="hide-menu">Giảm giá</span>
                         </li>
                         <li class="sidebar-item">
-
-                            <a class="sidebar-link" href="./icon-tabler.html" aria-expanded="false">
-
-                                <a asp-area="Admin" asp-controller="Voucher" asp-action="GetAllVoucher" >
-                                    <i class="bi bi-circle"></i><span>Quản lý Voucher</span>
-                                </a>
-                           @*      <span class="hide-menu">Danh sách Voucher</span> *@
-
+                            <a class="sidebar-link" asp-action="AllVoucherManager" asp-controller="Voucher" asp-area="Admin">
+                                <span class="hide-menu">Danh sách Voucher</span>
                             </a>
                         </li>
                     </ul>
@@ -182,61 +176,61 @@
         <div class="body-wrapper">
             <!--  Header Start -->
 
-                <nav class="navbar navbar-expand-lg navbar-light">
-                    <ul class="navbar-nav">
-                        <li class="nav-item d-block d-xl-none">
-                            <a class="nav-link sidebartoggler nav-icon-hover" id="headerCollapse" href="javascript:void(0)">
-                                <i class="ti ti-menu-2"></i>
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <ul class="navbar-nav">
+                    <li class="nav-item d-block d-xl-none">
+                        <a class="nav-link sidebartoggler nav-icon-hover" id="headerCollapse" href="javascript:void(0)">
+                            <i class="ti ti-menu-2"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link nav-icon-hover" href="javascript:void(0)">
+                            <i class="ti ti-bell-ringing"></i>
+                            <div class="notification bg-primary rounded-circle"></div>
+                        </a>
+                    </li>
+                </ul>
+                <div class="navbar-collapse justify-content-end px-0" id="navbarNav">
+                    <ul class="navbar-nav flex-row ms-auto align-items-center justify-content-end">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link nav-icon-hover" href="javascript:void(0)" id="drop2" data-bs-toggle="dropdown"
+                               aria-expanded="false">
+                                <img src="~/src/assets/images/profile/user-1.jpg" alt="" width="35" height="35" class="rounded-circle">
                             </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link nav-icon-hover" href="javascript:void(0)">
-                                <i class="ti ti-bell-ringing"></i>
-                                <div class="notification bg-primary rounded-circle"></div>
-                            </a>
+                            <div class="dropdown-menu dropdown-menu-end dropdown-menu-animate-up" aria-labelledby="drop2">
+                                <div class="message-body">
+                                    <a class="d-flex align-items-center gap-2 dropdown-item">
+                                        <i class="ti ti-user fs-6"></i>
+                                        <p class="mb-0 fs-3">My Profile</p>
+                                    </a>
+                                    <a class="d-flex align-items-center gap-2 dropdown-item">
+                                        <i class="ti ti-mail fs-6"></i>
+                                        <p class="mb-0 fs-3">My Account</p>
+                                    </a>
+
+                                    <a class="d-flex align-items-center gap-2 dropdown-item">
+
+                                        <i class="ti ti-list-check fs-6"></i>
+                                        <p class="mb-0 fs-3">My Task</p>
+                                    </a>
+                                    <a asp-action="Logout" asp-controller="AdminHome" class="btn btn-outline-primary mx-3 mt-2 d-block">Logout</a>
+                                </div>
+                            </div>
                         </li>
                     </ul>
-                    <div class="navbar-collapse justify-content-end px-0" id="navbarNav">
-                        <ul class="navbar-nav flex-row ms-auto align-items-center justify-content-end">
-                            <li class="nav-item dropdown">
-                                <a class="nav-link nav-icon-hover" href="javascript:void(0)" id="drop2" data-bs-toggle="dropdown"
-                                   aria-expanded="false">
-                                    <img src="~/src/assets/images/profile/user-1.jpg" alt="" width="35" height="35" class="rounded-circle">
-                                </a>
-                                <div class="dropdown-menu dropdown-menu-end dropdown-menu-animate-up" aria-labelledby="drop2">
-                                    <div class="message-body">
-                                        <a class="d-flex align-items-center gap-2 dropdown-item">
-                                            <i class="ti ti-user fs-6"></i>
-                                            <p class="mb-0 fs-3">My Profile</p>
-                                        </a>
-                                        <a class="d-flex align-items-center gap-2 dropdown-item">
-                                            <i class="ti ti-mail fs-6"></i>
-                                            <p class="mb-0 fs-3">My Account</p>
-                                        </a>
-
-                                        <a class="d-flex align-items-center gap-2 dropdown-item">
-
-                                            <i class="ti ti-list-check fs-6"></i>
-                                            <p class="mb-0 fs-3">My Task</p>
-                                        </a>
-                                        <a asp-action="Logout" asp-controller="AdminHome" class="btn btn-outline-primary mx-3 mt-2 d-block">Logout</a>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
+                </div>
+            </nav>
 
             </header>
 
             <!--  Header End -->
-        
-               
-                    <main role="main" class="pb-3">
-                        @RenderBody()
-                    </main>
-            
-        
+
+
+            <main role="main" class="pb-3">
+                @RenderBody()
+            </main>
+
+
 
         </div>
     </div>
