--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/GetAllHoaDon.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/GetAllHoaDon.cshtml
@@ -26,7 +26,7 @@
                 </div>
                 <div class="col-md-12">
 
-                    <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+                  @*   <div class="btn-group" role="group" aria-label="Basic mixed styles example">
                         <button type="button" class="btn btn-outline-dark">Tất cả</button>
                         <button type="button" class="btn btn-outline-primary">Chờ xác nhận</button>
                         <button type="button" class="btn btn-outline-secondary">Đã xác nhận</button>
@@ -34,7 +34,7 @@
                         <button type="button" class="btn btn-outline-danger">Đang giao</button>
                         <button type="button" class="btn btn-outline-warning"> Hoàn thành</button>
                         <button type="button" class="btn btn-outline-info">Hủy</button>
-                    </div>
+                    </div> *@
                 </div>
             </div>
         </div>
