--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/Shared/SP_partial.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/Shared/SP_partial.cshtml
@@ -49,7 +49,7 @@
                     <td>@item.GiaBan</td>
                     <td>@item.SoLuongTon</td>
                     <td>
-                        <button class="btn btn-primary" type="button"                   id="btn_updatedhct"
+                        <button class="btn btn-outline-dange" type="button" id="btn_updatedhct"
                            data-SKU="@item.SKU"
                            data-tensp="@item.TenSP"
                            data-MaSp="@item.MaSp"
@@ -57,7 +57,7 @@
                            data-img="@item.UrlAnhSpct"
                            data-trangthai="@item.TrangThai"
                         >
-                            Thêm sản phẩm 
+                            <i class="fa-solid fa-plus" style="color: #f00f0f;"></i>
                           </button>
                     </td>
                 </tr>
