--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/Index.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/Index.cshtml
@@ -5,11 +5,11 @@
     @{
    //  Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
     IEnumerable<Voucher> lstvc = ViewBag.lstVC as IEnumerable<Voucher>;
-    IEnumerable<User> ListUseradmin = ViewBag.ListUseradmin as IEnumerable<User>;
+     IEnumerable<User> ListUseradmin = ViewBag.ListUseradmin as IEnumerable<User>;
     IEnumerable<ThanhToan> lstThanhToan = ViewBag.lstThanhToan as IEnumerable<ThanhToan>;
     //IEnumerable<User> user = ViewBag.user as IEnumerable<User>;
     IEnumerable<ThanhToan_ThanhToanHistory> thanhtoanhoadon = ViewBag.thanhtoanhoadon as IEnumerable<ThanhToan_ThanhToanHistory>;
-   
+    var user = ViewBag.Model;
     }
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -22,9 +22,41 @@
 
     </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" integrity="sha512-b2QcS5SsA8tZodcDtGRELiGv5SaKSk1vDHDaQRda0htPYWZ6046lr3kJ5bAAQdpV2mmA/4v0wQF9MyU6/pDIAg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" crossorigin="anonymous" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" 
+crossorigin="anonymous" referrerpolicy="no-referrer" />
+<style>
+    /* Điều chỉnh màu chữ và font chữ */
+    body {
+        font-family: Arial, sans-serif;
+        color: #333;
+    }
 
+    /* Tạo khoảng cách giữa các phần tử */
+    .row {
+        margin-bottom: 20px;
+    }
+
+    /* Thiết lập kích thước cho hình ảnh */
+    img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    /* Định dạng các nút và input */
+    .btn {
+        border-radius: 0;
+    }
+
+    .form-control {
+        border-radius: 0;
+    }
+
+    /* Tạo hiệu ứng hover cho nút */
+    .btn:hover {
+        opacity: 0.8;
+    }
+
+</style>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.min.js" integrity="sha512-WW8/jxkELe2CAiE4LvQfwm1rajOS8PHasCCx+knHG0gBHt8EXxS6T6tJRTGuDQVnluuAvMxWF4j8SNFDKceLFg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -33,28 +65,27 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/notify/0.4.2/styles/metro/notify-metro.css" />
 <script src="~/js/Hoadon/getdiachi.js"></script>
 <script src="~/js/HoaDon.js"></script>
-
-<div class="row justify-content-center">
+<div class="container">
     <div class="card">
-        <div class="card-header">
-           <h2>Hóa đơn</h2>
+        <div class="card-header text-center">
            <div class="col-md-12">
                 <input id="btn_ma" style="display:none" class="form-control" type="text" /> <input id="btn_maQR" style="display:none" class="form-control" type="text" value="@ViewBag.RandomString" />
                     </div>
            <div class="row">
               <div class="col-md-5" >
                   <div class="row">
-                      <div class="col-md-6" >
-                          <label for="btn_UserID">Nhân viên</label>
-                            <select id="btn_UserID" class="form-control">
-                                @foreach (var item in ListUseradmin)
-                                {
-
-                                    <option value="@item.Id">@item.FullName</option>
-                                }
-                            </select>
-                      </div>
-                    
+                        <div class="form-group">
+                            <label for="btn_UserName">Nhân viên:</label>
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                <input class="form-control" type="text" id="btn_UserName" value="@user.UserName" readonly />
+                            }
+                            else
+                            {
+                                <p>Bạn chưa đăng nhập.</p>
+                            }
+                            </label>
+                        </div>
                      
                       <div class="col-md-6" style="display:none">
                           <label for="btn_phanloai">PhanLoai</label>
@@ -87,7 +118,7 @@
                         </div>
                         <div class="col-md-4">
                             <label for="btn_NgayTaoDon">Ngày tạo hóa đơn</label>
-                            <input id="btn_NgayTaoDon" class="form-control" type="date" />
+                            <input id="btn_NgayTaoDon" class="form-control" type="datetime" />
                         </div>
                       <div class="col-md-4">
                             <label for="City">Tỉnh/Thành phố</label>
@@ -350,8 +381,8 @@
                 <div class="col-md-12">
                     <span id="countdown"></span>
                 </div>
-                <div class="col-md-12">
-                    <img width="100%" id="imgQR" src="https://img.vietqr.io/image/MB-0336262156-qr_only.png" />
+                <div class="col-md-12 d-flex justify-content-center">
+                    <img width="60%" id="imgQR" src="https://img.vietqr.io/image/MB-0336262156-qr_only.png" />
                 </div>
                 <div class="col-md-12">
                    <p>Nội dung chuyển khoản: @ViewBag.RandomString</p>
