--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/SanPham/AllSanPhamManager.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/SanPham/AllSanPhamManager.cshtml
@@ -138,7 +138,7 @@
                                     <a asp-action="AllChiTietSpManager" asp-controller="ChiTietSP" asp-area="Admin" id="btn_chitiet_detail" class="btn btn-primary" type="button" asp-route-id="@item.MaSp"> All Chi Tiết</a>
                                         <a asp-action="CreateChiTietSp" asp-controller="ChiTietSP" asp-area="Admin" id="btn_chitiet_detail" class="btn btn-primary" type="button" asp-route-id="@item.MaSp"> Them 1 </a>
                                     <a asp-action="AddChiTietSp" asp-route-id="@item.MaSp" class="btn btn-primary">Thêm Nhiều</a>
-                                            <a asp-action="NhapHang" asp-route-id="@item.MaSp" class="btn btn-primary">Thêm Nhiều</a>
+                                            <a asp-action="NhapHang" asp-route-id="@item.MaSp" class="btn btn-primary">Sửa Giá</a>
 
 
 
