--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/SanPham/NhapHang.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/SanPham/NhapHang.cshtml
@@ -87,7 +87,7 @@
     }
 </style>
 
-<h1>Nhập Hàng</h1>
+<h1>Cập Nhật Giá và Số Lượng</h1>
 
 <form asp-action="NhapHang" method="post">
     <input type="hidden" asp-for="MaSp" />
