--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/ChiTietSP/ChiTietSpDetail.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/ChiTietSP/ChiTietSpDetail.cshtml
@@ -48,6 +48,7 @@
             @Html.DisplayNameFor(model => model.UrlAnhSpct)
         </dt>
          <dt >
+            @Html.DisplayFor(model => model.UrlAnhSpct)
 
                                 </dt>
         <dt class = "col-sm-2">
